styles.css
.html {
    font-size: 10px;
    background-color: (249, 251, 252);
    
}

.body {
    margin: 0px;
    background-color: rgb(249, 251, 252);
    
}

.site {
    display: flex;
    flex-direction: column;
    background-image: linear-gradient(rgba(255,255,255,0.5), rgba(255,255,255,0.5)), url("resources/img/background.jpg");
    background-color: rgb(249, 251, 252);
    background-repeat: no-repeat;
    background-position: top center;
    background-size: contain;
    height: 100%;
}

.heading {
    display: grid;
    grid-template-columns: repeat(6, 1fr);
    grid-template-rows: repeat(4, 1fr);
    padding: 10px 10px 80px 10px;
    margin: 150px 150px 50px 150px;
    justify-content: space-between;
    
}

.heading__pic {
    align-self: center;
    border-radius: 50%;
    grid-column: 1 / 3 ;
    grid-row: 1 / 5;
    max-width: 400px;
    border: 12px double rgb(112, 141, 109);
    margin: 10px;
}

.heading__name {
    font-family: "Sofia";
    font-size: 7rem;
    text-shadow: 8px 2px rgb(181, 224, 177);
    text-align: right;
    grid-column: 3 / 7;
    grid-row: 1 / 3;
    margin: 10px 10px 0px 10px;
    padding: 10px 10px 0px 10px;
    
}

.heading__subHeading {
    font-family: "Alike Angular";
    font-size: 3rem;
    text-shadow: 2px 2px rgb(188, 161, 143);;
    text-align: right;
    grid-column: 4 / 7;
    margin: 0px 10px;
    padding: 0px 10px;
    
}

.heading__description {
    font-family: "Alike Angular";
    font-size: 1.65rem;
    text-align: right;
    grid-column: 3 / 7;
    margin: 0px 10px 10px 10px;
    padding: 0px 10px 10px 10px;
   
}


.skills {
    display: flex;
    justify-content: center;
    background-color: rgb(249, 251, 252);
    
}

.icon {
    max-height: 100px;
    margin: 0px 50px 0px 50px;
    border: 8px outset rgb(188, 161, 143);
    border-radius: 5%;
}

.content {
    display: flex;
    flex-direction: column;
    background-color: rgb(249, 251, 252);
    margin: 0px;
    padding: 10px 200px;
    
}

.project1 {
    display: flex;
    justify-content: left;
    background-color: rgb(197, 224, 195);
    margin: 100px 200px 50px 200px;
    padding: 10px;
    
}

.project1__texts {
    display: flex;
    flex-direction: column;
    flex-grow: 1;
    padding: 10px;
    margin: 10px;
    
}

.project1__pic {
    max-width: 40%;
    border: 5px outset rgb(112, 141, 109);
    margin: 10px 50px 10px 10px;
}

.project1__heading {
    font-family: "Alike Angular";
    font-size: 2rem;
    text-align: left;
}

.project1__description {
    margin: 0px;
    font-family: "Alike Angular";
    font-size: 1.5rem; 
    
}

.project2 {
    display: flex;
    background-color: rgb(249, 251, 252); 
    flex-direction: row-reverse;
    justify-content: right;
    margin: 50px 200px;
    padding: 10px;
    
}

.project2__texts {
    display: flex;
    flex-direction: column;
    flex-grow: 1;
    padding: 10px;
    margin: 10px;
    
}

.project2__pic {
    max-width: 40%;
    border: 5px outset rgb(112, 141, 109);
    margin: 10px 10px 10px 50px;
}

.project2__heading {
    font-family: "Alike Angular";
    font-size: 2rem;
    text-align: left;
}

.project2__description {
    margin: 0px;
    font-family: "Alike Angular";
    font-size: 1.5rem; 
    
}

.project3 {
    display: flex;
    background-color: rgb(197, 224, 195);
    margin: 50px 200px 100px 200px;
    padding: 10px;
}

.project3__texts {
    display: flex;
    flex-direction: column;
    flex-grow: 1;
    padding: 10px;
    margin: 10px;
}

.project3__pic {
    max-width: 40%;
    border: 5px outset rgb(112, 141, 109);
    margin: 10px 50px 10px 10px;
}

.project3__heading {
    font-family: "Alike Angular";
    font-size: 2rem;
    text-align: left;
}

.project3__description {
    margin: 0px;
    font-family: "Alike Angular";
    font-size: 1.5rem; 
}

.contactInfo {
    display: flex;
    border: 2px solid darkslategray;
    margin: 100px 10px;
    padding: 10px;
    justify-content: space-around;
}

.contactInfo__info {
    font-family: "Alike Angular";
    font-size: 1.5rem;
    margin: 20px;
}

@media only screen and (max-width: 1900px) {

    .heading {
        padding: 10px;
        margin: 10px;
    }

    .heading__pic {
        max-width: 500px;
        margin-top: 50px;
    }

    .heading__name {
        font-size: 7rem;
        text-align: right;
        padding-top: 50px;
    }

    .heading__subHeading {
        font-size: 3rem;
        text-shadow: none;
        text-align: right;
        margin: 10px;
    }

    .heading__description {
        font-size: 2rem;
        text-align: right;
        margin-top: 10px;
    }

    .icon {
        margin: 50px 100px;
        max-width: 30%;
    }

    .content {
        padding: 100px;
    }
    
    .project1 {
        margin: 10px;
        padding: 20px;
    }

    .project2 {
        margin: 10px;
        padding: 20px;
    }

    .project3 {
        margin: 10px;
        padding: 20px;
    }
}

@media only screen and (max-width: 1299px) {

    .heading {
        padding: 10px;
        margin: 10px;
    }

    .heading__pic {
        max-width: 300px;
        margin-top: 50px;
    }

    .heading__name {
        font-size: 5rem;
        text-align: right;
    }

    .heading__subHeading {
        grid-row: ;
        font-size: 2rem;
        text-shadow: none;
        text-align: right;
        margin: 10px;
    }

    .heading__description {
        font-size: 1.3rem;
        text-align: right;
        margin-top: 10px;
    }

    .icon {
        margin: 50px 30px;
        max-width: 10%;
    }

    .content {
        padding: 50px;
    }
    
    .project1__heading {
        font-size: 1.5rem;
    }

    .project2__heading {
        font-size: 1.5rem;
    }

    .project3__heading {
        font-size: 1.5rem;
    }

    .project1__description {
        font-size: 1rem; 
    
    }
    .project2__description {
        font-size: 1rem; 
    
    }

    .project3__description {
        font-size: 1rem; 
    
    }
}

@media only screen and (min-width: 1000px) and (max-width: 1299px) {
    .project1__heading {
        font-size: 2rem;
    }

    .project2__heading {
        font-size: 2rem;
    }

    .project3__heading {
        font-size: 2rem;
    }
    
    .project1__description {
        font-size: 1.4rem;
    }

    .project2__description {
        font-size: 1.4rem;
    }

    .project3__description {
        font-size: 1.4rem;
    }
}

@media only screen and (max-width: 800px) {
    
    .heading {
        padding: 10px;
        margin: 10px;
        display: flex;
        flex-wrap: wrap;
        justify-content: center;
    }

    .heading__pic {
        max-width: 280px;
        margin-top: 50px;
    }

    .heading__name {
        font-size: 3rem;
        text-align: center;
    }

    .heading__subHeading {
        font-size: 1.5rem;
        text-shadow: none;
        text-align: center;
        margin: 10px;
    }

    .heading__description {
        font-size: 1.2rem;
        text-align: center;
        margin-top: 10px;
    }

    .skills {
        flex-wrap: wrap;
        margin-bottom: 50px;
    }

    .icon {
        margin: 5px;
        max-width: 15%;
    }

    .content {
        flex-wrap: wrap;
        padding: 0px;
    }
    
    .project1 {
        flex-wrap: wrap;
        justify-content: center;
        margin: 10px;
        padding: 5px;
    }

    .project2 {
        flex-wrap: wrap;
        justify-content: center;
        margin: 10px;
        padding: 5px;
    }

    .project3 {
        flex-wrap: wrap;
        justify-content: center;
        align-items: flex-start;
        margin: 10px;
        padding: 5px;
    }

    .project1__pic {
        max-width: 250px;
        margin: 40px 10px 10px 10px;
    }

    .project2__pic {
        max-width: 250px;
        margin: 40px 10px 10px 10px;
    }

    .project3__pic {
        max-width: 250px;
        margin: 40px 10px 10px 10px;
    }

    .project1__heading {
        margin: 10px;
        font-size: 2rem;
        text-align: center;
    }

    .project2__heading {
        margin: 10px;
        font-size: 2rem;
        text-align: center;
    }

    .project3__heading {
        margin: 10px;
        font-size: 2rem;
        text-align: center;
    }

    .project1__description {
        margin: 0px;
        font-family: "Alike Angular";
        font-size: 1.2rem; 
    
    }
    .project2__description {
        margin: 0px;
        font-family: "Alike Angular";
        font-size: 1.2rem; 
    
    }

    .project3__description {
        margin: 0px;
        font-family: "Alike Angular";
        font-size: 1.2rem; 
    
    }

    .contactInfo {
        flex-wrap: wrap;
        align-items: center;
        margin: 50px 10px;
    }

    

    
}

